--- a/source/vc++2013/hx20.vcxproj
+++ b/source/vc++2013/hx20.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{699AB843-1860-4ABF-B52C-D6A84D0F81E8}</ProjectGuid>
-    <RootNamespace>fmr30</RootNamespace>
+    <ProjectGuid>{F62D036D-7569-431B-9C55-C056A4D3145A}</ProjectGuid>
+    <RootNamespace>hx20</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -62,16 +62,16 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/fmr30.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug/hx20.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_FMR30;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_HX20;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/fmr30.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug/hx20.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
       <ObjectFileName>.\Debug/</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
@@ -86,10 +86,10 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;imm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Debug/fmr30.exe</OutputFile>
+      <OutputFile>.\Debug/hx20.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>.\Debug/fmr30.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Debug/hx20.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -98,7 +98,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/fmr30.bsc</OutputFile>
+      <OutputFile>.\Debug/hx20.bsc</OutputFile>
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>..\src\res\vista.manifest</AdditionalManifestFiles>
@@ -110,18 +110,18 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/fmr30.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release/hx20.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_FMR30;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_HX20;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-      <PrecompiledHeaderOutputFile>.\Release/fmr30.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Release/hx20.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
       <ObjectFileName>.\Release/</ObjectFileName>
       <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
@@ -135,9 +135,9 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;imm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Release/fmr30.exe</OutputFile>
+      <OutputFile>.\Release/hx20.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ProgramDatabaseFile>.\Release/fmr30.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Release/hx20.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -146,7 +146,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/fmr30.bsc</OutputFile>
+      <OutputFile>.\Release/hx20.bsc</OutputFile>
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>..\src\res\vista.manifest</AdditionalManifestFiles>
@@ -165,30 +165,31 @@
     <ClCompile Include="..\src\win32\osd_screen.cpp" />
     <ClCompile Include="..\src\win32\osd_sound.cpp" />
     <ClCompile Include="..\src\win32\winmain.cpp" />
+    <ClCompile Include="..\src\vm\ay_3_891x.cpp" />
+    <ClCompile Include="..\src\vm\datarec.cpp" />
     <ClCompile Include="..\src\vm\disk.cpp" />
     <ClCompile Include="..\src\vm\event.cpp" />
-    <ClCompile Include="..\src\vm\i286.cpp" />
-    <ClCompile Include="..\src\vm\i8237.cpp" />
-    <ClCompile Include="..\src\vm\i8251.cpp" />
-    <ClCompile Include="..\src\vm\i8253.cpp" />
-    <ClCompile Include="..\src\vm\i8259.cpp" />
+    <ClCompile Include="..\src\vm\i8255.cpp" />
     <ClCompile Include="..\src\vm\io.cpp" />
-    <ClCompile Include="..\src\vm\mb8877.cpp" />
-    <ClCompile Include="..\src\vm\scsi_dev.cpp" />
-    <ClCompile Include="..\src\vm\scsi_hdd.cpp" />
-    <ClCompile Include="..\src\vm\scsi_host.cpp" />
-    <ClCompile Include="..\src\vm\sn76489an.cpp" />
-    <ClCompile Include="..\src\vm\fmr50\bios.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\cmos.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\floppy.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\fmr30.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\keyboard.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\memory.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\rtc.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\scsi.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\serial.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\system.cpp" />
-    <ClCompile Include="..\src\vm\fmr30\timer.cpp" />
+    <ClCompile Include="..\src\vm\not.cpp" />
+    <ClCompile Include="..\src\vm\pcm1bit.cpp" />
+    <ClCompile Include="..\src\vm\prnfile.cpp" />
+    <ClCompile Include="..\src\vm\tms9918a.cpp" />
+    <ClCompile Include="..\src\vm\ym2413.cpp" />
+    <ClCompile Include="..\src\vm\z80.cpp" />
+    <ClCompile Include="..\src\vm\fmgen\fmgen.cpp" />
+    <ClCompile Include="..\src\vm\fmgen\fmtimer.cpp" />
+    <ClCompile Include="..\src\vm\fmgen\opna.cpp" />
+    <ClCompile Include="..\src\vm\fmgen\psg.cpp" />
+    <ClCompile Include="..\src\vm\msx\joystick.cpp" />
+    <ClCompile Include="..\src\vm\msx\kanjirom.cpp" />
+    <ClCompile Include="..\src\vm\msx\keyboard.cpp" />
+    <ClCompile Include="..\src\vm\msx\memory_ex.cpp" />
+    <ClCompile Include="..\src\vm\msx\msx_ex.cpp" />
+    <ClCompile Include="..\src\vm\msx\printer.cpp" />
+    <ClCompile Include="..\src\vm\msx\psg_stereo.cpp" />
+    <ClCompile Include="..\src\vm\msx\scc.cpp" />
+    <ClCompile Include="..\src\vm\msx\sound_cart.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\common.h" />
@@ -197,40 +198,45 @@
     <ClInclude Include="..\src\fileio.h" />
     <ClInclude Include="..\src\emu.h" />
     <ClInclude Include="..\src\win32\osd.h" />
+    <ClInclude Include="..\src\vm\ay_3_891x.h" />
+    <ClInclude Include="..\src\vm\datarec.h" />
     <ClInclude Include="..\src\vm\debugger.h" />
     <ClInclude Include="..\src\vm\device.h" />
     <ClInclude Include="..\src\vm\disk.h" />
     <ClInclude Include="..\src\vm\event.h" />
-    <ClInclude Include="..\src\vm\i286.h" />
-    <ClInclude Include="..\src\vm\i8237.h" />
-    <ClInclude Include="..\src\vm\i8251.h" />
-    <ClInclude Include="..\src\vm\i8253.h" />
-    <ClInclude Include="..\src\vm\i8259.h" />
+    <ClInclude Include="..\src\vm\i8255.h" />
     <ClInclude Include="..\src\vm\io.h" />
-    <ClInclude Include="..\src\vm\mb8877.h" />
-    <ClInclude Include="..\src\vm\scsi_dev.h" />
-    <ClInclude Include="..\src\vm\scsi_hdd.h" />
-    <ClInclude Include="..\src\vm\scsi_host.h" />
-    <ClInclude Include="..\src\vm\sn76489an.h" />
+    <ClInclude Include="..\src\vm\not.h" />
+    <ClInclude Include="..\src\vm\pcm1bit.h" />
+    <ClInclude Include="..\src\vm\prnfile.h" />
+    <ClInclude Include="..\src\vm\tms9918a.h" />
     <ClInclude Include="..\src\vm\vm.h" />
-    <ClInclude Include="..\src\vm\fmr50\bios.h" />
-    <ClInclude Include="..\src\vm\fmr30\cmos.h" />
-    <ClInclude Include="..\src\vm\fmr30\floppy.h" />
-    <ClInclude Include="..\src\vm\fmr30\fmr30.h" />
-    <ClInclude Include="..\src\vm\fmr30\keyboard.h" />
-    <ClInclude Include="..\src\vm\fmr30\memory.h" />
-    <ClInclude Include="..\src\vm\fmr30\rtc.h" />
-    <ClInclude Include="..\src\vm\fmr30\scsi.h" />
-    <ClInclude Include="..\src\vm\fmr30\serial.h" />
-    <ClInclude Include="..\src\vm\fmr30\system.h" />
-    <ClInclude Include="..\src\vm\fmr30\timer.h" />
+    <ClInclude Include="..\src\vm\ym2413.h" />
+    <ClInclude Include="..\src\vm\z80.h" />
+    <ClInclude Include="..\src\vm\fmgen\diag.h" />
+    <ClInclude Include="..\src\vm\fmgen\fmgen.h" />
+    <ClInclude Include="..\src\vm\fmgen\fmgeninl.h" />
+    <ClInclude Include="..\src\vm\fmgen\fmtimer.h" />
+    <ClInclude Include="..\src\vm\fmgen\headers.h" />
+    <ClInclude Include="..\src\vm\fmgen\misc.h" />
+    <ClInclude Include="..\src\vm\fmgen\opna.h" />
+    <ClInclude Include="..\src\vm\fmgen\psg.h" />
+    <ClInclude Include="..\src\vm\msx\joystick.h" />
+    <ClInclude Include="..\src\vm\msx\kanjirom.h" />
+    <ClInclude Include="..\src\vm\msx\keyboard.h" />
+    <ClInclude Include="..\src\vm\msx\memory_ex.h" />
+    <ClInclude Include="..\src\vm\msx\msx_ex.h" />
+    <ClInclude Include="..\src\vm\msx\printer.h" />
+    <ClInclude Include="..\src\vm\msx\psg_stereo.h" />
+    <ClInclude Include="..\src\vm\msx\scc.h" />
+    <ClInclude Include="..\src\vm\msx\sound_cart.h" />
     <ClInclude Include="..\src\res\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\src\res\fmr30.ico" />
+    <Image Include="..\src\res\hx20.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\src\res\fmr30.rc">
+    <ResourceCompile Include="..\src\res\hx20.rc">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
