--- a/source/build-cmake/msx2plus/CMakeLists.txt
+++ b/source/build-cmake/msx2plus/CMakeLists.txt
@@ -12,8 +12,8 @@ message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-project (emumsx2)
-set(EXEC_TARGET emumsx2)
+project (emumsx2plus)
+set(EXEC_TARGET emumsx2plus)
 set(VM_NAME msx)
 set(USE_FMGEN ON)
 set(WITH_JOYSTICK ON)
@@ -21,8 +21,8 @@ set(WITH_MOUSE ON)
 
 set(BUILD_PX7 OFF CACHE BOOL "Build for Pioneer PX7")
 set(BUILD_MSX1 OFF CACHE BOOL "Build for MSX1")
-set(BUILD_MSX2 ON CACHE BOOL "Build for MSX2")
-set(BUILD_MSX2PLUS OFF CACHE BOOL "Build for MSX2+")
+set(BUILD_MSX2 OFF CACHE BOOL "Build for MSX2")
+set(BUILD_MSX2PLUS ON CACHE BOOL "Build for MSX2+")
 set(BUILD_HX20 OFF CACHE BOOL "Build for Toshiba HX-20")
 set(BUILD_FSA1 OFF CACHE BOOL "Build for Panasonic FS-A1")
 set(BUILD_HBF1XDJ OFF CACHE BOOL "Build for Sony HB-F1XDJ")
