--- a/source/build-cmake/fmr30_i286/CMakeLists.txt
+++ b/source/build-cmake/fmr30_i286/CMakeLists.txt
@@ -12,11 +12,9 @@ message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-
 project (emufmr30)
 set(VM_NAME fmr30)
 set(USE_FMGEN OFF)
-set(EXEC_TARGET emufmr30)
 set(VMFILES
 #		   i286.cpp
 		   i8237.cpp
@@ -39,7 +37,21 @@ set(VMFILES_LIB
 		   pcm1bit.cpp
 		   i8251.cpp
 )
-set(FLAG_USE_I86 ON)
+
+set(BUILD_FMR30_86 OFF CACHE BOOL "Build for FM-R30, i86 version")
+set(BUILD_FMR30_286 ON CACHE BOOL "Build for FM-R30, i286 version")
+if(BUILD_FMR30_86)
+  set(EXEC_TARGET emufmr30_i86)
+  set(FLAG_USE_I86 ON)
+  add_definitions(-DHAS_I86)
+elseif(BUILD_FMR30_286)
+  set(EXEC_TARGET emufmr30_i286)
+  set(FLAG_USE_I86 OFF)
+  set(VMFILES ${VMFILES}
+	i286.cpp
+  )
+  add_definitions(-DHAS_I286)
+endif()
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
