--- a/source/build-cmake/pc2001/CMakeLists.txt
+++ b/source/build-cmake/pc2001/CMakeLists.txt
@@ -20,7 +20,7 @@ set(WITH_MOUSE OFF)
 set(WITH_DEBUGGER ON)
 
 set(VMFILES
-		   upd16434.cpp
+#		   upd16434.cpp
 		   upd1990a.cpp
 		   upd7810.cpp
 		   
@@ -30,6 +30,7 @@ set(VMFILES
 		   event.cpp
 )
 set(VMFILES_LIB
+		   upd16434.cpp
 		   pcm1bit.cpp
 )
 set(BUILD_SHARED_LIBS OFF)
