--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -18,8 +18,7 @@ set(s_vm_common_vm_srcs
 	../noise.cpp
 
 # MC6809 is temporally.
-#	../libcpu_newdev/libcpu_mc6809/mc6809_base.cpp
-	../mc6809.cpp
+	../mc6809_base.cpp
 	../mc6820.cpp
 	../mc6840.cpp
 	../libcpu_newdev/mcs48_base.cpp
@@ -64,7 +63,7 @@ set(s_vm_common_vm_srcs
 	../ym2151.cpp
 #	../ym2203.cpp
 	../ym2413.cpp
-#	../z80.cpp
+	../z80_base.cpp
 #	../z80ctc.cpp
 #	../z80dma.cpp
 	../z80pio.cpp
@@ -97,8 +96,8 @@ else()
     ${s_vm_common_vm_srcs}
   )
   set_target_properties(CSPcommon_vm PROPERTIES 
-     SOVERSION 1.1.1
-     VERSION 1.1.1
+     SOVERSION 1.1.2
+     VERSION 1.1.2
   )
   INSTALL(TARGETS CSPcommon_vm DESTINATION ${LIBCSP_INSTALL_DIR})
 endif()
