[VM][Build][CMAKE] Build supporting to Z80.

--- a/source/build-cmake/fp1100/CMakeLists.txt
+++ b/source/build-cmake/fp1100/CMakeLists.txt
@@ -19,8 +19,8 @@ set(USE_FMGEN OFF)
 set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE OFF)
 
+set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   z80.cpp
 		   upd7801.cpp
 		   hd46505.cpp
 
