--- a/source/build-cmake/sc3000/CMakeLists.txt
+++ b/source/build-cmake/sc3000/CMakeLists.txt
@@ -18,9 +18,9 @@ set(USE_FMGEN OFF)
 set(WITH_JOYSTICK ON)
 set(WITH_MOUSE ON)
 
+set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   z80.cpp
-		   
+
 		   i8251.cpp
 		   i8255.cpp
 		   
