--- a/source/build-cmake/hc40/CMakeLists.txt
+++ b/source/build-cmake/hc40/CMakeLists.txt
@@ -21,8 +21,8 @@ set(USE_FMGEN OFF)
 set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE OFF)
 
+set(FLAG_USE_Z80 ON)
 set(VMFILES_BASE
-      z80.cpp
       ptf20.cpp
       disk.cpp
       
