--- a/source/build-cmake/pv1000/CMakeLists.txt
+++ b/source/build-cmake/pv1000/CMakeLists.txt
@@ -17,8 +17,8 @@ set(VM_NAME pv1000)
 set(USE_FMGEN OFF)
 set(WITH_JOYSTICK ON)
 set(WITH_MOUSE OFF)
+set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   z80.cpp
 		   io.cpp
 		   memory.cpp
   
