[VM][M6502] Split M6502 to N2A03 and M6502.

--- a/source/build-cmake/familybasic/CMakeLists.txt
+++ b/source/build-cmake/familybasic/CMakeLists.txt
@@ -22,7 +22,7 @@ set(WITH_JOYSTICK ON)
 set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
-       m6502.cpp
+       n2a03.cpp
        datarec.cpp
        event.cpp
 )
