[VM] Add some devices to libCSPcommon_vm .

--- a/source/build-cmake/colecovision/CMakeLists.txt
+++ b/source/build-cmake/colecovision/CMakeLists.txt
@@ -20,13 +20,14 @@ set(WITH_MOUSE OFF)
 
 set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   sn76489an.cpp
-		   tms9918a.cpp
-		   
 		   io.cpp
 		   event.cpp
 )
 
+set(VMFILES_LIB
+		   tms9918a.cpp
+  		   sn76489an.cpp
+)
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
