--- a/source/build-cmake/familybasic/CMakeLists.txt
+++ b/source/build-cmake/familybasic/CMakeLists.txt
@@ -27,7 +27,9 @@ set(VMFILES_BASE
        event.cpp
 )
 
-
+set(VMFILES_LIB
+		ym2413.cpp
+)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 set(WITH_DEBUGGER OFF CACHE BOOL "Build with debugger.")
