--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,51 +1,62 @@
 message("* vm/common_vm")
 
 set(s_vm_common_vm_srcs
+	../315-5124.cpp
 	../and.cpp
 	../ay_3_891x.cpp
 	../beep.cpp
+#	../datarec.cpp
+	../disk.cpp
 	
 	../hd146818p.cpp
+	../hd46505.cpp
 	../hd63484.cpp
+#	../huc6280.cpp
+#	../i286.cpp
+#	../i386.cpp
+#	../i8080.cpp
+
 	../i8155.cpp
-	
+#	../i8237.cpp
 	../i8251.cpp
-	
+#	../i8253.cpp
+#	../i8255.cpp
 #	../i8259.cpp
+#	../i86.cpp
+#	../io.cpp
 #	../ld700.cpp
 	../ls244.cpp
 	../ls393.cpp
-	../noise.cpp
+
 	../m6502_base.cpp
+	../mb8877.cpp
+#	../mc6800.cpp
 	# MC6809 is temporally.
-	
 	../mc6809_base.cpp
 	../mc6820.cpp
 	../mc6840.cpp
 	../mc6847_base.cpp
-	
-	../libcpu_newdev/mcs48_base.cpp
-	../libcpu_newdev/i86_base.cpp
-
+#	../mcs48.cpp
 	../msm5205.cpp
 	../msm58321_base.cpp
-	
+#	../mz1p17.cpp
+#	../n2a03.cpp
 	../nand.cpp
+	../noise.cpp
 	../nor.cpp
 	../not.cpp
 	../or.cpp
-
 	../pc6031.cpp
 	../pc80s31k.cpp
 	../pcm1bit.cpp
 #	../prnfile.cpp
-#	../ptf20.cpp
+	../ptf20.cpp
 #	../rp5c01.cpp
 #	../scsi_cdrom.cpp
 #	../scsi_dev.cpp
 #	../scsi_hdd.cpp
 #	../scsi_host.cpp
-#	../sn76489an.cpp
+	../sn76489an.cpp
 #	../sy6522.cpp
 	../t3444a.cpp
 	../tf20.cpp
@@ -55,7 +66,7 @@ set(s_vm_common_vm_srcs
 	../upd16434.cpp
 #	../upd1990a.cpp
 	../upd4991a.cpp
-#	../upd71071.cpp
+	../upd71071.cpp
 #	../upd7220.cpp
 	../upd765a.cpp
 	../upd7752.cpp
@@ -69,12 +80,13 @@ set(s_vm_common_vm_srcs
 	../ym2413.cpp
 	../z80_base.cpp
 #	../z80ctc.cpp
-#	../z80dma.cpp
+	../z80dma.cpp
 	../z80pio.cpp
 #	../z80sio.cpp
 
-	../disk.cpp
-	../mb8877.cpp
+
+	../libcpu_newdev/mcs48_base.cpp
+	../libcpu_newdev/i86_base.cpp
 
 	../libcpu_newdev/libcpu_i386/i386_opdef.cpp
 	../libcpu_newdev/libcpu_i386/i386_base_ext.cpp
@@ -103,8 +115,8 @@ else()
     ${s_vm_common_vm_srcs}
   )
   set_target_properties(CSPcommon_vm PROPERTIES 
-     SOVERSION 1.1.2
-     VERSION 1.1.2
+     SOVERSION 1.1.3
+     VERSION 1.1.3
   )
   INSTALL(TARGETS CSPcommon_vm DESTINATION ${LIBCSP_INSTALL_DIR})
 endif()
