--- a/source/build-cmake/j3100gt/CMakeLists.txt
+++ b/source/build-cmake/j3100gt/CMakeLists.txt
@@ -23,13 +23,11 @@ set(VMFILES
 		   i8237.cpp
 		   i8253.cpp
 		   i8259.cpp
-		   hd46505.cpp
-
 		   io.cpp
-		   
 		   event.cpp
 )
 set(VMFILES_LIB
+		   hd46505.cpp
 		   pcm1bit.cpp
 		   upd765a.cpp
 		   disk.cpp
@@ -55,9 +53,11 @@ if(BUILD_J3100GT)
   add_definitions(-D_J3100GT)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100gt.qrc)
   set(VMFILES ${VMFILES} 
-               i286.cpp 
-	       hd146818p.cpp
-	       )
+        i286.cpp 
+  )
+  set(VMFILES_LIB ${VMFILES_LIB}
+		   hd146818p.cpp
+  )
 elseif(BUILD_J3100SL)
   set(EXEC_TARGET emuj3100sl)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100sl.qrc)
