--- a/source/build-cmake/mycomz80a/CMakeLists.txt
+++ b/source/build-cmake/mycomz80a/CMakeLists.txt
@@ -17,17 +17,18 @@ set(VM_NAME mycomz80a)
 set(USE_FMGEN OFF)
 set(FLAG_USE_Z80 ON)
 set(VMFILES
-	hd46505.cpp
 	
 	i8255.cpp
 	msm5832.cpp
-	sn76489an.cpp
-	
 	datarec.cpp
 	
 	event.cpp
 	io.cpp
 )
+set(VMFILES_LIB
+  	hd46505.cpp
+	sn76489an.cpp
+)	
 
 set(BUILD_MYCOMZ80A ON CACHE BOOL "Build EMU-MYCOMZ80A")
 set(BUILD_SHARED_LIBS OFF)
