--- a/source/build-cmake/pv2000/CMakeLists.txt
+++ b/source/build-cmake/pv2000/CMakeLists.txt
@@ -20,14 +20,14 @@ set(WITH_MOUSE OFF)
 
 set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   sn76489an.cpp
-		   tms9918a.cpp
-		   
 		   io.cpp
 		   memory.cpp
-  
 		   event.cpp
 )
+set(VMFILES_LIB
+		   sn76489an.cpp
+		   tms9918a.cpp
+)		   
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
