--- a/source/build-cmake/rx78/CMakeLists.txt
+++ b/source/build-cmake/rx78/CMakeLists.txt
@@ -20,13 +20,15 @@ set(WITH_MOUSE ON)
 
 set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   sn76489an.cpp
 		   datarec.cpp
 		   
 		   io.cpp
 		   event.cpp
 )
-
+set(VMFILES_LIB
+		   sn76489an.cpp
+)
+		 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
