--- a/source/build-cmake/mz3500/CMakeLists.txt
+++ b/source/build-cmake/mz3500/CMakeLists.txt
@@ -19,7 +19,7 @@ set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES
-	   z80.cpp
+#	   z80.cpp
 	   
 	   i8253.cpp
 	   i8255.cpp
@@ -28,8 +28,6 @@ set(VMFILES
 	   upd7220.cpp
    
 	   mz1p17.cpp
-	   prnfile.cpp
-	   
 	   event.cpp
 	   io.cpp
 )
@@ -39,8 +37,12 @@ set(VMFILES_LIB
 	   not.cpp
 	   pcm1bit.cpp
 	   upd765a.cpp
+	   
+	   prnfile.cpp
+	   
 	   disk.cpp
 )	   
+set(FLAG_USE_Z80 ON)
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
