[VM][COMMON_VM] Move I8237, I8253, I8255, I8259, UPD7220 and Z80SIO to common dll.

--- a/source/build-cmake/fm16pi/CMakeLists.txt
+++ b/source/build-cmake/fm16pi/CMakeLists.txt
@@ -22,14 +22,7 @@ set(WITH_MOUSE ON)
 
 set(VMFILES
 #		   i286.cpp
-#
-		   i8253.cpp
-		   i8255.cpp
-		   i8259.cpp
 		   msm58321.cpp
-		   
-		   ym2203.cpp
-		   
 #		   datarec.cpp
 		   event.cpp
 		   io.cpp
@@ -37,6 +30,11 @@ set(VMFILES
 )
 
 set(VMFILES_LIB
+		   i8253.cpp
+		   i8255.cpp
+		   i8259.cpp
+		   ym2203.cpp
+		   msm58321_base.cpp
 		   pcm1bit.cpp
 		   i8251.cpp
 		   not.cpp
