--- a/source/build-cmake/fmr30_i286/CMakeLists.txt
+++ b/source/build-cmake/fmr30_i286/CMakeLists.txt
@@ -16,10 +16,8 @@ project (emufmr30)
 set(VM_NAME fmr30)
 set(USE_FMGEN OFF)
 set(VMFILES
-#		   i286.cpp
+#		   i286.cpp	
 		   i8237.cpp
-		   i8253.cpp
-		   i8259.cpp
 		   fmr50/bios.cpp
 		   
 		   scsi_dev.cpp
@@ -33,6 +31,9 @@ set(VMFILES
 set(VMFILES_LIB
 		   pcm1bit.cpp
 		   i8251.cpp
+		   i8253.cpp
+		   i8259.cpp
+		   i8237_base.cpp
 		   sn76489an.cpp
 		   mb8877.cpp
 		   disk.cpp
