--- a/source/build-cmake/mz3500/CMakeLists.txt
+++ b/source/build-cmake/mz3500/CMakeLists.txt
@@ -21,9 +21,6 @@ set(WITH_MOUSE ON)
 set(VMFILES
 #	   z80.cpp
 	   
-	   i8253.cpp
-	   i8255.cpp
-		   
 	   upd1990a.cpp
 	   upd7220.cpp
    
@@ -33,10 +30,14 @@ set(VMFILES
 )
 set(VMFILES_LIB
 	   i8251.cpp
+	   i8253.cpp
+	   i8255.cpp
+		   
 	   ls244.cpp
 	   not.cpp
 	   pcm1bit.cpp
 	   upd765a.cpp
+	   upd7220_base.cpp
 	   
 	   prnfile.cpp
 	   
