--- a/source/build-cmake/ex80/CMakeLists.txt
+++ b/source/build-cmake/ex80/CMakeLists.txt
@@ -22,13 +22,14 @@ set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
        i8080.cpp
-       i8255.cpp
        io.cpp
        event.cpp
 )
 
 set(VMFILES_LIB
+       i8080_base.cpp
        i8251.cpp
+       i8255.cpp
        pcm1bit.cpp
 )       
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
